<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".forms.SignupFormFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.cardview.widget.CardView
            app:contentPadding="@dimen/formCardPadding"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            style="@style/form_card">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/signup_form_title"
                    style="@style/form_title"
                    android:text="@string/register_form_title" />

                <TextView
                    android:id="@+id/signup_form_error"
                    style="@style/form_error"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="" />

                <EditText
                    android:id="@+id/signup_form_email_fld"
                    style="@style/form_txt_field"
                    android:autofillHints="emailAddress"
                    android:hint="@string/your_email"
                    android:inputType="textEmailAddress" />

                <EditText
                    android:id="@+id/signup_form_pass_fld"
                    style="@style/form_txt_field"
                    android:autofillHints="password"
                    android:hint="@string/your_password"
                    android:inputType="textPassword" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:dividerPadding="24dp"
                    android:gravity="center_horizontal"
                    android:orientation="horizontal">

                    <Button
                        android:id="@+id/signup_form_submit_btn"
                        android:text="@string/register"
                        style="@style/form_button" />

                    <Button
                        android:id="@+id/signup_form_cancel_btn"
                        style="@style/form_button"
                        android:text="cancelar" />
                </LinearLayout>


            </LinearLayout>
        </androidx.cardview.widget.CardView>
    </androidx.constraintlayout.widget.ConstraintLayout>
</FrameLayout>